fixed double scrollbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,8 +4,7 @@
     font-family: 'Raleway', sans-serif;
 }
 
-html,
-body {
+html {
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
